resolved mobile overflow-x bug

--- a/css/reset.css
+++ b/css/reset.css
@@ -11,4 +11,9 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #000;
   line-height: 1.4;
+  /* width: 100%; */
+  overflow-x: hidden;
+}
+body {
+  position: relative;
 }
